@@ -17,17 +17,15 @@
  *  You should have received a copy of the GNU Affero General Public License along with SIRIUS.  If not, see <https://www.gnu.org/licenses/agpl-3.0.txt>
  */
 
-package de.unijena.bioinf.ms.gui.actions;/**
- * Created by Markus Fleischauer (markus.fleischauer@gmail.com)
- * as part of the sirius_frontend
- * 28.01.17.
- */
+package de.unijena.bioinf.ms.gui.actions;
 
 import ca.odell.glazedlists.swing.AdvancedListSelectionModel;
 import de.unijena.bioinf.projectspace.InstanceBean;
 import org.slf4j.LoggerFactory;
 
 import javax.swing.*;
+import java.lang.reflect.InvocationTargetException;
+import java.util.Collection;
 
 /**
  * @author Markus Fleischauer (markus.fleischauer@gmail.com)
@@ -55,23 +53,34 @@ public enum SiriusActions {
     EDIT_EXP(EditExperimentAction.class),
     DELETE_EXP(DeleteExperimentAction.class),
     REMOVE_FORMULA_EXP(RemoveFormulaAction.class),
+    CHANGE_ADDCUCT_EXP(ChangeAdductAction.class),
+    SUMMARIZE_EXP(SummarizeSelectedAction.class),
 
 
     NEW_WS(ProjectCreateAction.class),
     LOAD_WS(ProjectOpenAction.class),
     SAVE_WS(ProjectSaveAction.class),
     EXPORT_WS(ProjectSaveCopyAction.class),
-    SUMMARY_WS(ProjectSummaryAction.class),
+    SUMMARIZE_WS(SummarizeAllAction.class),
     EXPORT_FBMN(FBMNExportAction.class),
 
     SHOW_SETTINGS(ShowSettingsDialogAction.class),
-    SHOW_BUGS(ShowBugReportDialogAction.class),
+    OPEN_ONLINE_DOCUMENTATION(OpenOnlineDocumentationAction.class),
     SHOW_ABOUT(ShowAboutDialogAction.class),
     SHOW_JOBS(ShowJobsDialogAction.class),
     SHOW_DB(ShowDBDialogAction.class),
     SHOW_LOG(OpenLogAction.class),
 
+    SHOW_ACCOUNT(ShowAccountDialog.class),
+    SIGN_OUT(SignOutAction.class),
+    SIGN_IN(SignInAction.class),
+    SIGN_UP(SignUpAction.class),
+    RESET_PWD(PasswdResetAction.class),
+    DELETE_ACCOUNT(AccountDeleteAction.class),
+    ACCEPT_TERMS(AcceptTermsAction.class),
+
     CHECK_CONNECTION(CheckConnectionAction.class);
+
 
     public static final ActionMap ROOT_MANAGER = new ActionMap();
     public final Class<? extends Action> actionClass;
@@ -80,9 +89,9 @@ public enum SiriusActions {
         Action a = map.get(name());
         if (a == null && createIfNull) {
             try {
-                a = actionClass.newInstance();
+                a = actionClass.getDeclaredConstructor().newInstance();
                 map.put(name(), a);
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch ( InstantiationException | IllegalAccessException |NoSuchMethodException | InvocationTargetException e) {
                 LoggerFactory.getLogger(this.getClass()).error("Could not load following Sirius Action: " + name(), e);
             }
         }
@@ -101,43 +110,38 @@ public enum SiriusActions {
         return getInstance(true, ROOT_MANAGER);
     }
 
-    /*public static void initRootManager() {
-        for (SiriusActions action : values()) {
-            try {
-                if (ROOT_MANAGER.get(action.name()) == null) {
-                    Action actionInstance = action.actionClass.newInstance();
-                    ROOT_MANAGER.put(action.name(), actionInstance);
-                }
-            } catch (InstantiationException | IllegalAccessException e) {
-                LoggerFactory.getLogger(SiriusActions.class).error("Could not load following Sirius Action: " + action.name(), e);
-            }
-        }
-    }
-*/
-
     SiriusActions(Class<? extends Action> action) {
         this.actionClass = action;
     }
 
-    public static boolean notComputingOrEmpty(AdvancedListSelectionModel<InstanceBean> selection) {
-        return !isComputingOrEmpty(selection);
+
+    public static boolean notComputingOrEmpty(Collection<InstanceBean> instance) {
+        return !isComputingOrEmpty(instance);
     }
 
-    public static boolean isComputingOrEmpty(AdvancedListSelectionModel<InstanceBean> selection) {
+    public static boolean isComputingOrEmpty(Collection<InstanceBean> instances) {
+        if (instances == null || instances.isEmpty())
+            return true;
+        return instances.stream().anyMatch(InstanceBean::isComputing);
+    }
+
+    public static boolean notComputingOrEmptySelected(AdvancedListSelectionModel<InstanceBean> selection) {
+        return !isComputingOrEmptySelected(selection);
+    }
+
+    public static boolean isComputingOrEmptySelected(AdvancedListSelectionModel<InstanceBean> selection) {
         if (selection == null || selection.isSelectionEmpty())
             return true;
         return selection.getSelected().stream().anyMatch(InstanceBean::isComputing);
     }
 
-    public static boolean notComputingOrEmptyFirst(AdvancedListSelectionModel<InstanceBean> selection) {
-        return !isComputingOrEmptyFirst(selection);
+    public static boolean notComputingOrEmptyFirstSelected(AdvancedListSelectionModel<InstanceBean> selection) {
+        return !isComputingOrEmptyFirstSelected(selection);
     }
 
-    public static boolean isComputingOrEmptyFirst(AdvancedListSelectionModel<InstanceBean> selection) {
+    public static boolean isComputingOrEmptyFirstSelected(AdvancedListSelectionModel<InstanceBean> selection) {
         if (selection == null || selection.isSelectionEmpty())
             return true;
         return selection.getSelected().get(0).isComputing();
     }
-
-
 }
