@@ -24,13 +24,24 @@ package de.unijena.bioinf.ms.gui.fingerid;
 import ca.odell.glazedlists.EventList;
 import ca.odell.glazedlists.matchers.MatcherEditor;
 import ca.odell.glazedlists.swing.DefaultEventListModel;
+import com.fasterxml.jackson.databind.DeserializationFeature;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import de.unijena.bioinf.chemdb.DataSource;
 import de.unijena.bioinf.chemdb.DataSources;
+import de.unijena.bioinf.chemdb.InChISMILESUtils;
+import de.unijena.bioinf.elgordo.LipidClass;
+import de.unijena.bioinf.ms.gui.compute.jjobs.Jobs;
 import de.unijena.bioinf.ms.gui.configs.Icons;
 import de.unijena.bioinf.ms.gui.fingerid.candidate_filters.MolecularPropertyMatcherEditor;
 import de.unijena.bioinf.ms.gui.fingerid.candidate_filters.SmartFilterMatcherEditor;
+import de.unijena.bioinf.ms.gui.mainframe.MainFrame;
+import de.unijena.bioinf.ms.gui.mainframe.result_panel.ResultPanel;
 import de.unijena.bioinf.ms.gui.table.ActionList;
 import de.unijena.bioinf.ms.gui.utils.ToolbarToggleButton;
 import de.unijena.bioinf.ms.gui.utils.TwoColumnPanel;
+import de.unijena.bioinf.webapi.rest.ProxyManager;
+import org.apache.http.client.methods.HttpGet;
 import org.slf4j.LoggerFactory;
 
 import javax.swing.*;
@@ -46,11 +57,12 @@ import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.DecimalFormat;
 import java.text.NumberFormat;
-import java.util.Locale;
-import java.util.Map;
-import java.util.OptionalInt;
+import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class CandidateListDetailView extends CandidateListView implements MouseListener, ActionListener {
     public static final Color INVERT_HIGHLIGHTED_COLOR = new Color(255, 30, 0, 192);
@@ -62,7 +74,7 @@ public class CandidateListDetailView extends CandidateListView implements MouseL
     protected Thread structureSearcherThread;
 
 
-    protected JMenuItem CopyInchiKey, CopyInchi, OpenInBrowser1, OpenInBrowser2, highlight;
+    protected JMenuItem CopyInchiKey, CopyInchi, OpenInBrowser1, OpenInBrowser2, highlight, annotateSpectrum;
     protected JPopupMenu popupMenu;
 
     protected int highlightAgree = -1;
@@ -75,6 +87,7 @@ public class CandidateListDetailView extends CandidateListView implements MouseL
 
     public CandidateListDetailView(StructureList sourceList) {
         super(sourceList);
+
         getSource().addActiveResultChangedListener((experiment, sre, resultElements, selections) -> {
             if (experiment == null || experiment.stream().noneMatch(e -> e.getFingerprintResult().isPresent()))
                 showCenterCard(ActionList.ViewState.NOT_COMPUTED);
@@ -108,16 +121,19 @@ public class CandidateListDetailView extends CandidateListView implements MouseL
         OpenInBrowser1 = new JMenuItem("Open in PubChem");
         OpenInBrowser2 = new JMenuItem("Open in all databases");
         highlight = new JMenuItem("Highlight matching substructures");
+        annotateSpectrum = new JMenuItem("Show annotated spectrum");
         CopyInchi.addActionListener(this);
         CopyInchiKey.addActionListener(this);
         OpenInBrowser1.addActionListener(this);
         OpenInBrowser2.addActionListener(this);
         highlight.addActionListener(this);
+        annotateSpectrum.addActionListener(this);
         popupMenu.add(CopyInchiKey);
         popupMenu.add(CopyInchi);
         popupMenu.add(OpenInBrowser1);
         popupMenu.add(OpenInBrowser2);
         popupMenu.add(highlight);
+        popupMenu.add(annotateSpectrum);
         setVisible(true);
     }
 
@@ -129,13 +145,13 @@ public class CandidateListDetailView extends CandidateListView implements MouseL
         filterByMolecularPropertyButton = new ToolbarToggleButton(null, Icons.MolecularProperty_24, "filter by highlighted molecular property");
 
         smartFilterTextField = new JTextField();
-        TwoColumnPanel panel2 = new TwoColumnPanel();
-        panel2.setBorder(new EmptyBorder(0, 0, 0, 0));
+        TwoColumnPanel smartsFilter = new TwoColumnPanel();
+        smartsFilter.setBorder(new EmptyBorder(0, 0, 0, 0));
         smartFilterTextField.setPreferredSize(new Dimension(100, smartFilterTextField.getPreferredSize().height));
-        panel2.add(new JLabel("SMARTS Filter"), smartFilterTextField);
+        smartsFilter.add(new JLabel("SMARTS Filter"), smartFilterTextField);
 
         tb.add(filterByMolecularPropertyButton);
-        tb.add(panel2);
+        tb.add(smartsFilter);
 
         return tb;
     }
@@ -172,7 +188,7 @@ public class CandidateListDetailView extends CandidateListView implements MouseL
                         return;
                     try {
                         if (s.URI.contains("%s")) {
-                            Desktop.getDesktop().browse(new URI(String.format(Locale.US, s.URI, URLEncoder.encode(entry.getValue(), "UTF-8"))));
+                            Desktop.getDesktop().browse(new URI(String.format(Locale.US, s.URI, URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8))));
                         } else {
                             Desktop.getDesktop().browse(new URI(String.format(Locale.US, s.URI, Integer.parseInt(entry.getValue()))));
                         }
@@ -181,33 +197,35 @@ public class CandidateListDetailView extends CandidateListView implements MouseL
                     }
                 });
             }
-        } else if (c!=null && e.getSource() == this.highlight) {
-            SwingWorker w = new SwingWorker<>() {
-
-                @Override
-                protected Object doInBackground() throws Exception {
-                    try {
-                        c.highlightInBackground();
-                    } catch (Exception e) {
-                        e.printStackTrace();
+        } else if (c != null && e.getSource() == this.highlight) {
+            Jobs.runInBackground(() -> {
+                c.highlightInBackground();
+                Jobs.runEDTLater(() -> {
+                    final CompoundMatchHighlighter h;
+                    synchronized (c) {
+                        h = c.highlighter;
                     }
-                    return c;
-                }
+                    h.hightlight(c);
+                    source.getElementList().elementChanged(c);
+                });
+            });
 
-                @Override
-                protected void done() {
-                    super.done();
-                    if (getState() == StateValue.DONE) {
-                        final CompoundMatchHighlighter h;
-                        synchronized (c) {
-                            h = c.highlighter;
-                        }
-                        h.hightlight(c);
-                        source.getElementList().elementChanged(c);
-                    }
+        } else if (c != null && e.getSource() == this.annotateSpectrum) {
+            final ResultPanel rp = MainFrame.MF.getResultsPanel();
+            final int idx = Jobs.runInBackgroundAndLoad(MainFrame.MF, () -> {
+                int i = 0;
+                for (FingerprintCandidateBean fpc : rp.structureAnnoTab.getCandidateTable().getFilteredSource()) {
+                    if (fpc.getInChiKey().equals(c.getInChiKey()))
+                        return i;
+                    i++;
                 }
-            };
-            w.execute();
+                return 0;
+            }).getResult();
+
+            Jobs.runEDTLater(() -> {
+                rp.setSelectedComponent(MainFrame.MF.getResultsPanel().structureAnnoTab);
+                rp.structureAnnoTab.getStructureList().getTopLevelSelectionModel().setSelectionInterval(idx, idx);
+            });
         }
     }
 
@@ -242,7 +260,7 @@ public class CandidateListDetailView extends CandidateListView implements MouseL
 
             for (DatabaseLabel l : candidate.labels) {
                 if (l.rect.contains(point.x, point.y)) {
-                    clickOnDBLabel(l);
+                    clickOnDBLabel(l, candidate);
                     break;
                 }
             }
@@ -253,15 +271,55 @@ public class CandidateListDetailView extends CandidateListView implements MouseL
         }
     }
 
-    private void clickOnDBLabel(DatabaseLabel label) {
-        DataSources.getSourceFromName(label.name).ifPresent(s -> {
+    private void clickOnDBLabel(DatabaseLabel label, FingerprintCandidateBean candidate) {
+        DataSources.getSourceFromName(label.sourceName).ifPresent(s -> {
             if (label.values == null || label.values.length == 0 || s.URI == null)
                 return;
             try {
                 for (String id : label.values) {
                     if (id == null) continue;
-                    if (s.URI.contains("%s")) {
-                        Desktop.getDesktop().browse(new URI(String.format(Locale.US, s.URI, URLEncoder.encode(id, "UTF-8"))));
+                    if (s == DataSource.LIPID) {
+                        Jobs.runInBackground(() -> {
+                            try {
+                                //todo remove if lipid maps is added to our pubchem copy
+                                List<String> lmIds = ProxyManager.applyClient(client -> {
+                                    URI uri = URI.create(String.format(Locale.US, "https://www.lipidmaps.org/rest/compound/inchi_key/%s/lm_id", URLEncoder.encode(InChISMILESUtils.inchi2inchiKey(candidate.candidate.getInchi().in3D), StandardCharsets.UTF_8)));
+                                    HttpGet get = new HttpGet(uri);
+                                    return client.execute(get, r -> {
+                                        List<String> ids = new ArrayList<>();
+                                        try {
+                                            ObjectMapper mapper = new ObjectMapper();
+                                            mapper.enable(DeserializationFeature.ACCEPT_EMPTY_ARRAY_AS_NULL_OBJECT);
+                                            JsonNode array = mapper.readTree(r.getEntity().getContent());
+                                            if (array != null && !array.isEmpty() && array.isArray()) {
+                                                array.forEach(node -> {
+                                                    if (node.has("lm_id"))
+                                                        ids.add(node.get("lm_id").asText(null));
+                                                });
+                                            }
+                                        } catch (Exception e) {
+                                            LoggerFactory.getLogger(getClass()).error("Error when parsing lipid maps response.", e);
+                                        }
+                                        return ids.stream().filter(Objects::nonNull).collect(Collectors.toList());
+                                    });
+                                });
+                                if (lmIds != null && !lmIds.isEmpty()) {
+                                    lmIds.forEach(lmId -> {
+                                        try {
+                                            Desktop.getDesktop().browse(URI.create(String.format(Locale.US, DataSource.LIPID.URI, URLEncoder.encode(lmId, StandardCharsets.UTF_8))));
+                                        } catch (IOException e) {
+                                            LoggerFactory.getLogger(getClass()).error("Error when opening lipid maps URL.", e);
+                                        }
+                                    });
+                                } else {
+                                    Desktop.getDesktop().browse(LipidClass.makeLipidMapsFuzzySearchLink(id));
+                                }
+                            } catch (Exception ex) {
+                                LoggerFactory.getLogger(getClass()).error("Could not fetch lipid maps URL.", ex);
+                            }
+                        });
+                    } else if (s.URI.contains("%s")) {
+                        Desktop.getDesktop().browse(new URI(String.format(Locale.US, s.URI, URLEncoder.encode(id, StandardCharsets.UTF_8))));
                     } else {
                         Desktop.getDesktop().browse(new URI(String.format(Locale.US, s.URI, Integer.parseInt(id))));
                     }
